src/snapshots/alma__infer__tests__test_infer_module__record_type_application_arity_mismatch-2.snap
---
source: src/infer.rs
assertion_line: 3078
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype List a = { x : a }\n\nmain : List Float String\nmain = { x : 1 }\n\")"
---
Input:

module Test exposing (main)

type List a = { x : a }

main : List Float String
main = { x : 1 }


---
Output:

Test.alma [5:7]

Type `List a (alias of { x : a })` accepts 1 parameter but it was called with 2.

  3│  type List a = { x : a }
  4│  
  5│  main : List Float String
   │         ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  6│  main = { x : 1 }
