src/snapshots/alma__infer__tests__test_infer_module__signature_extensible_records_too_generic_check.snap
---
source: src/infer.rs
assertion_line: 3121
expression: "infer(\"\\\nmodule Test exposing (main)\n\nmain : { r | x : a, y: a } -> Float\nmain r = r.x + r.y + 1\n\")"
---
Input:

module Test exposing (main)

main : { r | x : a, y: a } -> Float
main r = r.x + r.y + 1


---
Output:

Test.alma [3:0]

The type signature is more generic than the inferred type:

  1│  module Test exposing (main)
  2│  
  3│  main : { r | x : a, y: a } -> Float
   │  ↑↑↑↑
  4│  main r = r.x + r.y + 1

The type signature says the type is

{ a | x : b, y : b } -> Float

which it is more general than

{ a | x : Float, y : Float } -> Float

which was inferred from the code.

Change the signature to be more specific or try to make your code more generic.
