src/snapshots/alma__infer__tests__test_infer_module__signature_records_too_generic_check.snap
---
source: src/infer.rs
assertion_line: 2545
expression: "infer(\"\\\nmodule Test exposing (main)\n\nmain : { x : a } -> Float\nmain r = r.x + 1\n\")"

---
Input:

module Test exposing (main)

main : { x : a } -> Float
main r = r.x + 1


---
Output:

[3:0]

The type signature is more generic than the inferred type:

  1│  module Test exposing (main)
  2│  
  3│  main : { x : a } -> Float
   │  ↑↑↑↑
  4│  main r = r.x + 1

The type signature says the type is

{ x : a } -> Float

which it is more general than

{ x : Float } -> Float

which was inferred from the code.

Change the signature to be more specific or try to make your code more generic.
