src/snapshots/alma__infer__tests__test_infer_module__typed_definition_with_mismatched_signature.snap
---
source: src/infer.rs
assertion_line: 3487
expression: "infer(\"\\\nmodule Test exposing (main)\n\nmain : String\nmain = 5\n\")"
---
Input:

module Test exposing (main)

main : String
main = 5


---
Output:

Test.alma [3:0]

The type signature and inferred type don't match

  1│  module Test exposing (main)
  2│  
  3│  main : String
   │  ↑↑↑↑
  4│  main = 5

The type signature says the type is

    String

but it seems to be

    Float
