src/snapshots/alma__infer__tests__test_infer_module__use_union_type_constructor_from_module_alias.snap
---
source: src/infer.rs
assertion_line: 2346
expression: "infer(\"\\\nmodule Test exposing (main)\n\nimport Test.Fruits as Fruits\n\nmain = Fruits.Banana\n\nmodule Test.Fruits exposing (Fruit(Banana))\n    type Fruit = Banana\n\")"

---
Input:

module Test exposing (main)

import Test.Fruits as Fruits

main = Fruits.Banana

module Test.Fruits exposing (Fruit(Banana))
    type Fruit = Banana


---
Output:

module Test

main : ∀ ∅ . Fruit


module Test.Fruits

Banana : ∀ ∅ . Fruit


